# jit

./: .gitmodules  CMakeLists.txt
include/: bindings.hpp  vector3.hpp
include/bindings/: quaternion.hpp  vector3.hpp
luajit_install/lib/pkgconfig/: luajit.pc
scripts/: structure.lua
src/: color3.cpp  color4.cpp  main.cpp  matrix3.cpp  matrix4.cpp  quaternion.cpp  scalar.cpp  transform.cpp  vector2.cpp  vector3.cpp  vector4.cpp
src/bindings/: color3.cpp  color4.cpp  matrix3.cpp  matrix4.cpp  quaternion.cpp  transform.cpp  vector2.cpp  vector3.cpp
tests/: main.lua
